maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:87: error: ')' expected but '}' found.
		}
                ^